getAttributes